--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,19 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link href="assests/css/style.css" rel="stylesheet" />
+    <link href="assests/css/Home.css" rel="stylesheet" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    />
+
+    <link rel="stylesheet" href="assests/css/Contact.css" />
+    <link rel="stylesheet" href="assests/css/Home.css" />
   </head>
   <body>
     <div id="root"></div>
