--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,9 @@
     />
 
     <link rel="stylesheet" href="assests/css/Contact.css" />
-    <link rel="stylesheet" href="assests/css/Home.css" />
+    <!-- <link rel="stylesheet" href="assests/css/Home.css" /> -->
+
+    <link rel="stylesheet" href="assests/css/Continuous.css" />
   </head>
   <body>
     <div id="root"></div>
