--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assests/css/login.css" />
+
+    <!-- for about us page -->
+    <link rel="stylesheet" href="assests/css/About.css" />
   </head>
   <body>
     <div id="root"></div>
