--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link href="assests/css/Home.css" rel="stylesheet" />
+    <link href="../src/assets/css/Home.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
