footer is added

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,13 @@
 
     <!-- for about us page -->
     <link rel="stylesheet" href="assests/css/About.css" />
+
+    <!-- for footer section -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link rel="stylesheet" href="assests/css/footer.css" />
   </head>
   <body>
     <div id="root"></div>
